# bevy_boids

./: Cargo.toml
src/: boid_plugin.rs  main.rs
src/boid_plugin/: boid.rs  boid_entity_store.rs
