[package]
name = "terrain_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
log = "0.4"
bevy_mod_raycast = "0.16"
bevy_rapier3d = "*"
rand = "0.8.4"
bevy_egui = "0.23"
bevy_mod_picking = { git = 'https://github.com/aevyrie/bevy_mod_picking.git' }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3